--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "browser-extension-template",
+  "name": "input-translator",
   "description": "manifest.json description",
   "private": true,
   "version": "0.0.0",
