--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,7 @@
 env:
-  DIRECTORY: .output
   PROJECT_NAME: input-translator
+  PLUGIN_PATH: .
+  DIRECTORY: .output
 
 name: Release
 
@@ -23,7 +24,7 @@ jobs:
       - name: Check for version change
         id: check_version
         run: |
-          if git diff --name-only HEAD~1..HEAD | grep -q '^package\.json$'; then
+          if git diff --name-only HEAD~1..HEAD | grep -q '^${{ env.PLUGIN_PATH }}/package\.json$'; then
             VERSION_CHANGED=1
           else
             VERSION_CHANGED=0
@@ -33,7 +34,7 @@ jobs:
         if: ${{ steps.check_version.outputs.version_changed == '1' }}
         id: get_version
         run: |
-          VERSION=$(jq -r .version package.json)
+          VERSION=$(jq -r .version ${{ env.PLUGIN_PATH }}/package.json)
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
   Submit:
@@ -51,14 +52,15 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           cache: 'pnpm'
       - name: Install dependencies
-        run: pnpm install
+        run: |
+          pnpm install && pnpm init-all
       - name: Zip extensions
         run: |
-          pnpm run zip
-          pnpm run zip:firefox
+          cd ${{ env.PLUGIN_PATH }}
+          pnpm zip && pnpm zip:firefox
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -68,6 +70,6 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            ${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-chrome.zip
-            ${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-firefox.zip
-            ${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-sources.zip
+            ${{ env.PLUGIN_PATH }}/${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-chrome.zip
+            ${{ env.PLUGIN_PATH }}/${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-firefox.zip
+            ${{ env.PLUGIN_PATH }}/${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-sources.zip
