--- a/package.json
+++ b/package.json
@@ -18,20 +18,29 @@
     "init-project": "vite-node lib/build/init.ts"
   },
   "dependencies": {
+    "@liuli-util/google-translate-api-free": "^0.2.0",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
     "@webext-core/messaging": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.513.0",
     "next-themes": "^0.4.6",
+    "openai": "^5.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
-    "tw-animate-css": "^1.3.4"
+    "tw-animate-css": "^1.3.4",
+    "type-fest": "^4.41.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.30",
@@ -45,6 +54,7 @@
     "playwright": "^1.52.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
+    "vite-bundle-analyzer": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.2",
     "vitest-browser-react": "^0.2.0",
