--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,6 @@
 env:
-  PROJECT_NAME: input-translator
-  PLUGIN_PATH: .
   DIRECTORY: .output
+  PROJECT_NAME: input-translator
 
 name: Release
 
@@ -24,7 +23,7 @@ jobs:
       - name: Check for version change
         id: check_version
         run: |
-          if git diff --name-only HEAD~1..HEAD | grep -q '^${{ env.PLUGIN_PATH }}/package\.json$'; then
+          if git diff --name-only HEAD~1..HEAD | grep -q '^package\.json$'; then
             VERSION_CHANGED=1
           else
             VERSION_CHANGED=0
@@ -34,7 +33,7 @@ jobs:
         if: ${{ steps.check_version.outputs.version_changed == '1' }}
         id: get_version
         run: |
-          VERSION=$(jq -r .version ${{ env.PLUGIN_PATH }}/package.json)
+          VERSION=$(jq -r .version package.json)
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
   Submit:
@@ -52,15 +51,14 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
           cache: 'pnpm'
       - name: Install dependencies
-        run: |
-          pnpm install && pnpm init-all
+        run: pnpm install
       - name: Zip extensions
         run: |
-          cd ${{ env.PLUGIN_PATH }}
-          pnpm zip && pnpm zip:firefox
+          pnpm run zip
+          pnpm run zip:firefox
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -70,6 +68,6 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            ${{ env.PLUGIN_PATH }}/${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-chrome.zip
-            ${{ env.PLUGIN_PATH }}/${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-firefox.zip
-            ${{ env.PLUGIN_PATH }}/${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-sources.zip
+            ${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-chrome.zip
+            ${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-firefox.zip
+            ${{ env.DIRECTORY }}/${{env.PROJECT_NAME}}-${{ needs.Version.outputs.version }}-sources.zip
