--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.513.0",
     "next-themes": "^0.4.6",
+    "nprogress": "^0.2.0",
     "openai": "^5.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.30",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.1",
